Entrainement canvas : - Boucle de cercle ; - Debut scroll img.

--- a/test.html
+++ b/test.html
@@ -11,8 +11,8 @@
 <body>
     <canvas id="mon_canvas" height="1000" width="1000"></canvas>
     <script>
-        let c = document.getElementById("mon_canvas");
-        let ctx = c.getContext("2d");
+        let cvs = document.getElementById("mon_canvas");
+        let ctx = cvs.getContext("2d");
 
         function boucleCercle() {
             for (let repet = 0; repet < 1000; repet++) {
